[gd_scene format=3 uid="uid://dy8cc6gtjmbe7"]

[ext_resource type="Script" uid="uid://bck65ko0o4df1" path="res://scenes/ui/main_menu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://unljls1nimv2" path="res://assets/textures/main_menu_background.png" id="2_wb0q5"]
[ext_resource type="FontFile" uid="uid://dngwuth2a6635" path="res://assets/fonts/Alphakind.ttf" id="7_font"]
[ext_resource type="Texture2D" uid="uid://cvs03nnpvm1pj" path="res://assets/textures/larry.png" id="8_larry"]
[ext_resource type="Texture2D" uid="uid://nkmtwfoir6kk" path="res://assets/textures/main_icon.png" id="10_main_icon"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("7_font")
font_size = 64
font_color = Color(1, 0.98, 0.9, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.85)
shadow_offset = Vector2(2, 3)

[sub_resource type="LabelSettings" id="LabelSettings_credits"]
font = ExtResource("7_font")
font_size = 44
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.7)

[node name="MainMenu" type="CanvasLayer" unique_id=813004239]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="." unique_id=1134571839]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="TextureRect" parent="Control" unique_id=2085122944]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_wb0q5")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="Control" unique_id=1934589144]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.4)

[node name="Larry" type="TextureRect" parent="Control" unique_id=1171224787]
layout_mode = 0
offset_left = 700.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 700.0
mouse_filter = 2
texture = ExtResource("8_larry")
expand_mode = 1
stretch_mode = 5

[node name="DisasterPopup" type="TextureRect" parent="Control" unique_id=276322230]
visible = false
layout_mode = 0
offset_left = 548.0
offset_top = 210.0
offset_right = 706.0
offset_bottom = 368.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(79, 79)
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="MainPanel" type="VBoxContainer" parent="Control" unique_id=1986120587]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -304.0
offset_right = 105.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleRow" type="HBoxContainer" parent="Control/MainPanel" unique_id=1409134514]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="MainIcon" type="TextureRect" parent="Control/MainPanel/TitleRow" unique_id=2035679442]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("10_main_icon")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="Control/MainPanel/TitleRow" unique_id=858241151]
layout_mode = 2
text = "Larry's Madness"
label_settings = SubResource("LabelSettings_title")

[node name="HSpacer2" type="Control" parent="Control/MainPanel" unique_id=122179865]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="PlayButton" type="Button" parent="Control/MainPanel" unique_id=1265363243]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 30
text = "JOUER"

[node name="HSpacer3" type="Control" parent="Control/MainPanel" unique_id=347214579]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="Control/MainPanel" unique_id=280115009]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 22
text = "CRÉDITS"

[node name="HSpacer4" type="Control" parent="Control/MainPanel" unique_id=122678753]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/MainPanel" unique_id=1133884451]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 22
text = "QUITTER"

[node name="CreditsPanel" type="Control" parent="Control" unique_id=296020239]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsOverlay" type="ColorRect" parent="Control/CreditsPanel" unique_id=1653170744]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.04, 0.03, 0.93)

[node name="CreditsVBox" type="VBoxContainer" parent="Control/CreditsPanel" unique_id=865411076]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -260.0
offset_right = 400.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CreditsTitle" type="Label" parent="Control/CreditsPanel/CreditsVBox" unique_id=552688219]
layout_mode = 2
text = "Crédits"
label_settings = SubResource("LabelSettings_credits")
horizontal_alignment = 1

[node name="CreditsSpacer1" type="Control" parent="Control/CreditsPanel/CreditsVBox" unique_id=2068024252]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CreditsText" type="Label" parent="Control/CreditsPanel/CreditsVBox" unique_id=1536333751]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.88, 1)
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 22
text = "Un jeu créé pendant la Jam de Février

..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="CreditsSpacer2" type="Control" parent="Control/CreditsPanel/CreditsVBox" unique_id=804573649]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="Control/CreditsPanel/CreditsVBox" unique_id=1394251109]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("7_font")
theme_override_font_sizes/font_size = 28
text = "RETOUR"
